Add a new appType webpublicauth and use it.
Fix a problem with calsuite mappings - we were losing owner, creator, publick flag and acl

Add readonly flag to svci pars constructors. Set it for public auth client.